Fix width issue when using on mobile

--- a/public/stylesheets/auth.css
+++ b/public/stylesheets/auth.css
@@ -1,5 +1,9 @@
-html {
+html, body {
     font-size: 1rem;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 }
   
 @include media-breakpoint-up(sm) {
